# secretsanta

./: README.md  secretsanta.cabal  stack.yaml
app/: Main.hs
