name:                secretsanta
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/quickdudley/secretsanta#readme
license:             BSD3
license-file:        LICENSE
author:              Jeremy List
maintainer:          quick.dudley@gmail.com
copyright:           BSD3
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/quickdudley/secretsanta#readme>

executable secretsanta
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       containers,
                       phaser,
                       random
  default-language:    Haskell2010

test-suite secretsanta-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/quickdudley/secretsanta
